add swagger response schema to apis
